<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title= "@string/nav_dashboard" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_tasks" />
        <item
            android:id="@+id/nav_assignment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_assignment" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_project" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_courses" />
    </group>


</menu>
